@@ -307,6 +307,7 @@ struct lldpd {
 	char			*g_mgmt_pattern;
 
         char                    *g_descr_override;
+	char			*g_lsb_release;
 
 #define LOCAL_CHASSIS(cfg) ((struct lldpd_chassis *)(TAILQ_FIRST(&cfg->g_chassis)))
 	TAILQ_HEAD(, lldpd_chassis) g_chassis;
